new paper, some changes

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@ author_profile: true
     </style>
 
       <div align="left">
-	<h5><span style="background-color: yellow;"> I am recruiting PhD students for this year's admissions cycle (to start in Fall 2026)!</span> If you are interested in decarbonizing energy systems, integrating hyperscale demand in our electricity grids, and advancing sustainable mobility, consider applying to RIT's <a href = "https://www.rit.edu/study/sustainability-phd"> <b>Sustainability PhD program </b></a> (Deadline: Jan 15, 2026) and mention my name in your application. Feel free to reach out to me via email.</h5>
+	<h5><span style="background-color: yellow;"> I am recruiting PhD students for this year's admissions cycle (to start in Fall 2026)!</span> If you are interested in decarbonizing energy systems, integrating hyperscale demand in our electricity grids, and advancing sustainable mobility, consider applying to RIT's <a href = "https://www.rit.edu/study/sustainability-phd"> <b>Sustainability PhD program </b></a> (Deadline: Jan 15, 2026) and mention my name in your application. Feel free to reach out to me via email. </h5>
+
+<p><h5> I'll be at the University of Buffalo on Nov 21, 2025, and Cornell University on Dec 1, 2025, to talk more about my past and upcoming research projects. </p></h5>
 
 	<p> 
 	<h3 id="pubs">Peer-Reviewed Publications</h3>
@@ -61,8 +63,17 @@ author_profile: true
       </div>
       <p>
         <ol>
+          <li> <a> Retail rate design for decarbonized and resilient electricity systems. [with Bruce Cain, In&#234s Azevedo]</a> <b><i> Progress in Energy.</i></b> 2025. <b>*</b> [<a href="/Papers/RateDesign/Draft_Perspective.pdf">Paper</a>]</li>  
+              <details><summary>Abstract</summary>
 
-          <li> <a href="https://doi.org/10.1016/j.tej.2025.107475">Wires and fire: Wildfire investment and network cost differences across California's power providers</a>. [with Alison Ong, Rayan Sud] <b><i> The Electricity Journal</i></b>. 2025. <b>*</b> [<a href="/Papers/RateDesign/wires_fire.pdf">Paper</a>]</li>
+                <p> This perspective examines trade-offs in designing residential electricity rates that improve economic efficiency while ensuring feasible and distributionally favorable outcomes. We analyze rate structures across three key dimensions: improving economic efficiency by reflecting social marginal costs; ensuring affordability, technology access, and residual cost recovery; and simplicity in customer understanding and implementation. While real-time pricing based on social marginal costs is the most economically efficient choice, intermediate approaches like time-of-use rates or critical peak rates may better balance competing objectives. We recommend that decision-makers (1) move towards pricing environmental externalities in time-varying electricity rates, (2) introduce time-varying rates with predictable price periods gradually, (3) expand access to flexibility enabling technologies for low-income customers, and (4) carefully design fixed charges for residual cost recovery to avoid distributionally regressive impacts. These findings are
+particularly relevant as utilities nationwide consider rate reforms to support electrification while maintaining ratepayer affordability.
+ </p>
+
+	</details>
+
+
+          <li> <a href="https://doi.org/10.1016/j.tej.2025.107475">Wires and fire: Wildfire investment and network cost differences across California's power providers</a>. [with Alison Ong, Rayan Sud] <b><i> The Electricity Journal</i></b>. 2025. <b>*</b> [<a href="/Papers/RateDesign/Rates_perspective.pdf">Paper</a>]</li>
 
                <details><summary>Abstract</summary>
 
@@ -114,14 +125,6 @@ author_profile: true
       <p>
         <ul class="dashed">
 
-          <li> <a> Equitable retail rates for a decarbonized and resilient electricity system. [with Bruce Cain, In&#234s Azevedo]</a> <b><i> In revision, Progress in Energy.</i></b> <b>*</b> [<a href="/Papers/RateDesign/Draft_Perspective.pdf">Draft</a>]</li>  
-              <details><summary>Abstract</summary>
-
-                <p> The design of residential electricity rates varies across the United States. Some utilities charge a fixed charge as well as a volumetric rate, whereas others include only a volumetric rate which can change depending on the time of the day and total electricity consumption. The average values of electricity rates per kWh consumed range from 12.7 to 47.7 cents across the U.S. Other differences across states include subsidies for low-income, real-time prices, time-of-use prices, and special retail rates for distributed energy resources and electric vehicle charging. Despite the varying designs in electricity rates, there are commonalities in the goals of electricity service provision by utilities, such as reliably providing electricity, while recovering generation, transmission, and distribution costs of electricity. In regions where constant volumetric rates are used, these costs are lumped together often failing to reflect the true social marginal costs of electricity. In most regions, utility revenue requirements will likely continue to increase as end-uses electrify and electricity decarbonizes. Progress in rate reform
-and utility innovation has been slow, with less than 1% of Americans facing an electricity price that varies with time, and the implications of different designs of electricity rate designs for consumers are poorly understood. In this perspective, we discuss the challenges and progress in designing an efficient and equitable retail rate for a decarbonizing grid. Specifically, we delve into two aspects of retail rate design: one, how do we make efficient retail rates – i.e., rates that reflect the varying social marginal cost of electricity, recoup required costs, and enable proper utilization of the grid infrastructure, and second, are current and new retail rates designs equitable, particularly with bill impacts across income and race gradients. Given California's high and increasing retail rates, high distributed energy generation and EV penetration, and rising utility-related wildfire risk, we also discuss the case of California, using it as a case study with potentially generalizable results across the country
- </p>
-
-	</details>
 
           <li> <a> Policies to retire old light-duty vehicles will help achieve California's zero-emissions targets and provide substantial air-pollution co-benefits. [With Eleanor Hennessy, Sarah Saltzer, Andrew Berson, In&#234s Azevedo] </a><b><i>In submission</i></b>.<b>*</b> [<a href="/Papers/stock_flow/LDV_draft.pdf">Draft</a>] </li>
 
