--- a/index.html
+++ b/index.html
@@ -55,14 +55,15 @@ author_profile: true
       <div align="left">
 	<h5><span style="background-color: yellow;"> I am recruiting PhD students for this year's admissions cycle (to start in Fall 2026)!</span> If you are interested in decarbonizing energy systems, integrating hyperscale demand in our electricity grids, and advancing sustainable mobility, consider applying to RIT's <a href = "https://www.rit.edu/study/sustainability-phd"> <b>Sustainability PhD program </b></a> (Deadline: Jan 15, 2026) and mention my name in your application. Feel free to reach out to me via email. </h5>
 <div style="background-color: #f5f5f5; padding: 20px; border-left: 4px solid #0066cc; margin: 20px 0;">
+
+<div style="background-color: #f5f5f5; padding: 20px; border-left: 4px solid #0066cc; margin: 20px 0;">
   <p>I'm visiting the following campuses over the coming months to talk more about my past and future research projects:</p>
   <ul>
-    <li><a href="https://arts-sciences.buffalo.edu/environment-sustainability/news-events/evs-seminar-series.html">University of Buffalo, Orin Foster Environmental Lecture Series</a>, Nov 21, 2025</li>
-    <li>Department Seminar, Biological and Environmental Engineering, Dec 1, 2025</li>
-    <li>Bren School of Environment Seminar, University of California Santa Barbara, Jan 26, 2026</li>
+    <li><a href="https://arts-sciences.buffalo.edu/environment-sustainability/news-events/evs-seminar-series.html">Orin Foster Environmental Lecture Series, University of Buffalo</a>, <strong>Nov 21, 2025</strong></li>
+    <li>Department Seminar, Biological and Environmental Engineering, Cornell University, <strong>Dec 1, 2025</strong></li>
+    <li>Bren School of Environment Seminar, University of California Santa Barbara, <strong>Jan 26, 2026</strong></li>
   </ul>
-</div>
-	<p> 
+</div>	<p> 
 	<h3 id="pubs">Peer-Reviewed Publications</h3>
 	<small> * first-author publication </small> 
       </div>
