--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ author_profile: true
     </style>
 
       <div align="left">
-<h5><span style="background-color: yellow;"> I am recruiting PhD students for this year's admissions cycle (to start in Fall 2026)!</span> If you are interested in decarbonizing energy systems, integrating hyperscale demand in our electricity grids, and advancing sustainable mobility, consider applying to RIT's <a href = "https://www.rit.edu/study/sustainability-phd"> <b>Sustainability PhD program </b></a> (Deadline: Jan 15, 2026) and mention my name in your application. Feel free to reach out to me via email with your CV! </h5>
-<details style=""background-color: yellow; padding: 20px; border-left: 4px solid #0066cc; margin: 20px 0;">
+<h5><span style="background-color: lightyellow;"> I am recruiting PhD students for this year's admissions cycle (to start in Fall 2026)!</span> If you are interested in decarbonizing energy systems, integrating hyperscale demand in our electricity grids, and advancing sustainable mobility, consider applying to RIT's <a href = "https://www.rit.edu/study/sustainability-phd"> <b>Sustainability PhD program </b></a> (Deadline: Jan 15, 2026) and mention my name in your application. Feel free to reach out to me via email with your CV! </h5>
+<details style="background-color: lightyellow; color: white; padding: 10px; border-radius: 5px;">
   <summary style="cursor: pointer; font-weight: bold;">
     More information about the position
   </summary>
