--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ author_profile: true
 
       <div align="left">
 <h5><span style="background-color: lightyellow;"> I am recruiting PhD students for this year's admissions cycle (to start in Fall 2026)!</span> If you are interested in decarbonizing energy systems, integrating hyperscale demand in our electricity grids, and advancing sustainable mobility, consider applying to RIT's <a href = "https://www.rit.edu/study/sustainability-phd"> <b>Sustainability PhD program </b></a> (Deadline: Jan 15, 2026) and mention my name in your application. Feel free to reach out to me via email with your CV! </h5>
-<details style="background-color: lightyellow; color: white; padding: 10px; border-radius: 5px;">
+<details style="background-color: lightyellow; color: black; padding: 10px; border-radius: 5px;">
   <summary style="cursor: pointer; font-weight: bold;">
     More information about the position
   </summary>
